    - Nuclear assembling machine crafting time 0.5 ==> 10
    - Nuclear assembling machine crafting category changed to "advanced crafting".
    - Productivity module 4 pollution bonus 0.125 ==> 0.14
    - Productivity-effectivity module 2 pollution bonus 0.075 ==> 0.07
    - Productivity-effectivity module 4 pollution bonus 0.125 == 0.14
  Graphics:
    - Updated nuclear assembling machine textures.
  Mod integration:
    - Added integration with Plutonium Energy.
    - Added plutonium steel.
    - Added plutonium assembling machine.
---------------------------------------------------------------------------------------------------
Version: 0.15.4
Date: 25.04.2019
  Fixes:
    - Fixed nuclear inserter entity icon.
---------------------------------------------------------------------------------------------------
Version: 0.15.3
Date: 24.04.2019
  Fixes:
    - Fixed nuclear underground belt side loading sprite.
---------------------------------------------------------------------------------------------------
Version: 0.15.2
Date: 24.04.2019
  Fixes:
    - Fixed hardened steel furnace lr texture filename.
---------------------------------------------------------------------------------------------------
Version: 0.15.1
Date: 14.04.2019
  Locale:
    - Russian:
      - Ядрённый сборщик ==> Ядрённый сборочный автомат.
    - Ukrainian:
      - Ядерний складальник ==> Ядерний складальний автомат.
---------------------------------------------------------------------------------------------------
Version: 0.15.0
Date: 13.04.2019
  Major changes:
    - Removed hardened burner mining drill.
    - Added steel and electric hardened furnaces.
    - Removed "Hardened buildings" technology.
    - Added technologies for hardened furnaces.
  Balancing:
    - Changed hardened electric mining drill mining area to 6x6.
    - Hardened stone furnace:
      - Crafting speed 1.3 ==> 1.25
      - Health 600 ==> 300
    - Nuclear assembling machine:
      - Max health 500 ==> 450